--- a/securitywebapp/src/webapp/templates/showuser.twig
+++ b/securitywebapp/src/webapp/templates/showuser.twig
@@ -26,7 +26,7 @@
             <td>{{  user.postcode }}</td>
             <tr></tr>
             <th>Hash:</th>
-            <td><!-- {{ user.hash|raw }} -->********************************(not shown)</td>
+            <td>********************************(not shown)</td>
             <tr></tr>
             <th>Email:</th>
             <td>{{ user.email }}</td>
