--- a/securitywebapp/src/webapp/templates/showuserlite.twig
+++ b/securitywebapp/src/webapp/templates/showuserlite.twig
@@ -11,25 +11,24 @@
     <table>
         <tr>
             <th>Id</th>
-            <th>{{ user.userid|raw }}</th>
+            <th>{{ user.userid}}</th>
             <tr></tr>
             <th>Username:</th>
-            <td>{{ user.username|raw }}</th>
+            <td>{{ user.username }}</th>
             <tr></tr>
             <th>Bio:</th>
-            <td>{{ user.bio|raw }}</td>
+            <td>{{ user.bio }}</td>
             <tr></tr>
             <th>Age:</th>
-            <td>{{ user.age|raw }}</td>
-            <tr></tr>
-        <!-- PS: RMB4P!!! {{ user.hash|raw }} --></td>
+            <td>{{ user.age }}</td>
+            <tr></tr></td>
 
 
 
 
     </table>
 {% else %}
-    Could not find a user with username "{{ username|raw }}".
+    Could not find a user with username "{{ username }}".
 {% endif %}
 
 {% endblock %}
