User can now set bank account number, and set ispaying to 1/0 (true/false)

--- a/securitywebapp/src/webapp/templates/edituser.twig
+++ b/securitywebapp/src/webapp/templates/edituser.twig
@@ -26,6 +26,12 @@
         <label>Age:</label>
         <input type="text" name="age" value="{{ user.age }}"> <br />
 
+        <label>Bank account: (Leave as zero to keep existing)</label>
+        <input type="number" name="bnr" value="{{ user.bnr }}"> <br /> 
+
+        <label>Pay to recieve expert advice?:</label>
+        <input type="checkbox" name="ispayinguser" value=1>  <br />
+
         <input type="submit" name="submit" value="Save profile">
     </form>
 {% endblock %}
