--- a/securitywebapp/src/webapp/templates/edituser.twig
+++ b/securitywebapp/src/webapp/templates/edituser.twig
@@ -26,8 +26,8 @@
         <label>Age:</label>
         <input type="text" name="age" value="{{ user.age }}"> <br />
 
-        <label>Bank account: (Leave as zero to keep existing)</label>
-        <input type="number" name="bnr" value="{{ user.bnr }}"> <br /> 
+        <label>Bank account:</label>
+        <input type="text" name="bnr" value="{{ user.bnr }}"> <br /> 
 
         <label>Pay to recieve expert advice?:</label>
         <input type="checkbox" name="ispayinguser" value=1>  <br />
