--- a/securitywebapp/src/webapp/templates/showpost.twig
+++ b/securitywebapp/src/webapp/templates/showpost.twig
@@ -1,10 +1,10 @@
 {% extends 'base.twig' %}
 
 {% block content %}
-    <h3> {{ flash.msg|raw }}</h3>
+    <h3> {{ flash.msg }}</h3>
     {% if post %}
         <h2>{{ post.title}}</h2>
-        <h3> by {{post.author|raw}}</h3>
+        <h3> by {{post.author}}</h3>
         <p> {{ post.content }}</p>
         <lb></lb>
         <h2>COMMENTS</h2>
