--- a/securitywebapp/src/webapp/templates/posts.twig
+++ b/securitywebapp/src/webapp/templates/posts.twig
@@ -5,8 +5,8 @@
     <h2>Posts</h2>
 
     {% for post in posts %}
-        <div class="post" {% if post.isAnsweredByDoctor == 1 %} id="answered" {% endif %}>
-            <a href="/posts/{{ post.postId }}">{{ post.title }}</a> by  <a href="/user/{{ post.author }}"> {{ post.author }}</a>. Posted on {{ post.date }}
+        <div class="post"{% if post.getDoctor == 1 %} id="answered" {% endif %}>
+            <a href="/posts/{{ post.postId }}">{{ post.title }}</a> by <a href="/user/{{ post.author }}">{{ post.author }}</a>. Posted on {{ post.date }}
         </div>
     {% else %}
         There are no posts as of yet
