ispayed checkbox checked based on user setting

--- a/securitywebapp/src/webapp/templates/edituser.twig
+++ b/securitywebapp/src/webapp/templates/edituser.twig
@@ -30,7 +30,7 @@
         <input type="text" name="bnr" value="{{ user.bnr }}"> <br /> 
 
         <label>Pay to recieve expert advice?:</label>
-        <input type="checkbox" name="ispayinguser" value=1>  <br />
+        <input type="checkbox" name="ispayinguser" checked={{ user.ispayinguser }}>  <br />
 
         <input type="submit" name="submit" value="Save profile">
     </form>
