--- a/securitywebapp/src/webapp/templates/admin.twig
+++ b/securitywebapp/src/webapp/templates/admin.twig
@@ -44,15 +44,12 @@
             <tr>
                 <th>Id</th>
                 <th>Username</th>
-                <th>Status</th>
+                <th>Doctor Status</th>
             </tr>
             {% for user in users %}
                 <tr>
                     <td>{{ user.userid}}</td>
                     <td><a href="/user/{{ user.username}}">{{ user.username}}</a></td>
-                    {#TODO Get doctor stsatus from db#}
-                    <td><a href="/user/{{ user.userid}}">{{ user.userid }}</a> </td>
-
                     <td><a href="/admin/grantDoctor/{{ user.userid}}">Grant Doctor status</a></td>
                     <td><a href="/admin/revokeDoctor/{{ user.userid }}">Revoke Doctor status</a></td>
                 </tr>
